# quant-project

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  prefect.toml  prefect.yaml  profiles.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dbt_quant/: dbt_project.yml  profiles.yml
envs/: .env
src/app/: __init__.py  _config.py  _logger.py  utils.py
src/app/common/: database.py  db.py  email_sender.py  market_data.py  models.py  utils.py
src/app/data/: db.py  db_engine.py
src/app/flows/: flow_utils.py  my_flow.py
src/app/mkt_data/: market_data.py  models.py  quant_db.py  update_index_constituents.py
src/app/models/: models.py
src/app/options/: blackscholes.py
src/app/service/: update_index_constituents.py  utils.py
src/app/sql/: init_db.sql  merge_sp500_constituents.sql
src/app/ui/: resources.py  streamlit_app.py
src/app/ui/.streamlit/: config.toml
src/app/ui/jobs/: load_yfinance_price_data.py  load_yfinance_security_data.py  update_sp500_index_constituents.py
src/app/ui/reports/: black_scholes.py
src/dbt_quant/: .user.yml  dbt_project.yml
src/qp/: __init__.py  _config.py  _logger.py
src/qp/data/: db_engine.py
src/qp/sql/: init_db.sql
src/qp/ui/.streamlit/: config.toml
tests/integration/: test_database.py  test_db.py  test_db_conn.py  test_email_sender.py  test_market_data.py  test_quant_db.py  test_update_sp500_index_constituent_job.py  test_yfinance_data.py
tests/unit/: test_config.py  test_logger.py  test_utils.py
