[project]
name = "quant-project"
version = "0.0.1"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "pydantic",
    "pydantic-settings",
    "streamlit",
    "yfinance",
    "polars",
    "concurrent-log-handler",
    "lxml",
]


[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "watchdog", "ipykernel"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["**/*", ".*"]
