[project]
name = "quant-project"
version = "0.0.1"
description = "A project demonstrating quantitative analytics, data engineering, and software development skills."
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-postgresql>=1.6.0",
    "concurrent-log-handler>=0.9.26",
    "dbt-core>=1.10.2",
    "dbt-postgres>=1.9.0",
    "lxml>=5.4.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pandera>=0.24.0",
    "polars>=1.30.0",
    "prefect>=3.4.8",
    "prefect-dbt>=0.7.1",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "scipy>=1.15.3",
    "skfolio>=0.9.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.8.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["**/*", ".*"]


# skip running ruff on __init__.py files
[tool.ruff]
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "COM",    # flake8-commas
    "EM",     # flake8-errmsg
    "ICN",    # flake8-import-conventions
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "TID",    # flake8-tidy-imports
    "FA",     # flake8-future-annotations
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "TD",     # flake8-todos
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "PD",     # pandas-vet
    "RUF",    # Ruff-specific rules
    "TRY",    # tryceratops
    "FBT001", # flake8-boolean-trap
]

line-length = 120
exclude = [".venv/**", "src/app/__init__.py"]
target-version = "py312"
